--- a/dev/ini.html
+++ b/dev/ini.html
@@ -31,13 +31,15 @@
 │  └─ <a href='ini_details.html#ini.equilibrium.rz_points'>rz_points</a>  [m]
 ├─ <span class="sgr1">core_profiles</span>
 │  ├─ <a href='ini_details.html#ini.core_profiles.plasma_mode'>plasma_mode</a>
+│  ├─ <a href='ini_details.html#ini.core_profiles.w_ped'>w_ped</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.ne_value'>ne_value</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.ne_setting'>ne_setting</a>
-│  ├─ <a href='ini_details.html#ini.core_profiles.w_ped'>w_ped</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.ne_sep_to_ped_ratio'>ne_sep_to_ped_ratio</a>
+│  ├─ <a href='ini_details.html#ini.core_profiles.ne_core_to_ped_ratio'>ne_core_to_ped_ratio</a>
+│  ├─ <a href='ini_details.html#ini.core_profiles.ne_shaping'>ne_shaping</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.T_ratio'>T_ratio</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.T_shaping'>T_shaping</a>
-│  ├─ <a href='ini_details.html#ini.core_profiles.n_shaping'>n_shaping</a>
+│  ├─ <a href='ini_details.html#ini.core_profiles.Te_sep'>Te_sep</a>  [eV]
 │  ├─ <a href='ini_details.html#ini.core_profiles.zeff'>zeff</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.rot_core'>rot_core</a>  [s⁻¹]
 │  ├─ <a href='ini_details.html#ini.core_profiles.ngrid'>ngrid</a>
@@ -140,4 +142,4 @@
    ├─ <a href='ini_details.html#ini.requirements.q95'>q95</a>
    ├─ <a href='ini_details.html#ini.requirements.coil_j_margin'>coil_j_margin</a>
    └─ <a href='ini_details.html#ini.requirements.coil_stress_margin'>coil_stress_margin</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="inits.html">« Init routines</a><a class="docs-footer-nextpage" href="dd.html">Data Structure »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.7.0 on <span class="colophon-date" title="Friday 27 September 2024 02:46">Friday 27 September 2024</span>. Using Julia version 1.10.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="inits.html">« Init routines</a><a class="docs-footer-nextpage" href="dd.html">Data Structure »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.7.0 on <span class="colophon-date" title="Saturday 28 September 2024 02:46">Saturday 28 September 2024</span>. Using Julia version 1.10.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
