build based on bf966e0

--- a/dev/ini.html
+++ b/dev/ini.html
@@ -53,8 +53,6 @@
 │  ├─ <a href='ini_details.html#ini.core_profiles.ejima'>ejima</a>
 │  └─ <a href='ini_details.html#ini.core_profiles.polarized_fuel_fraction'>polarized_fuel_fraction</a>
 ├─ <span class="sgr1">pf_active</span>
-│  ├─ <a href='ini_details.html#ini.pf_active.n_coils_inside'>n_coils_inside</a>
-│  ├─ <a href='ini_details.html#ini.pf_active.n_coils_outside'>n_coils_outside</a>
 │  └─ <a href='ini_details.html#ini.pf_active.technology'>technology</a>
 ├─ <span class="sgr1">rampup</span>
 │  ├─ <a href='ini_details.html#ini.rampup.side'>side</a>
@@ -109,6 +107,7 @@
 │  │     ├─ <a href='ini_details.html#ini.build.layers.1.name'>name</a>
 │  │     ├─ <a href='ini_details.html#ini.build.layers.1.thickness'>thickness</a>
 │  │     ├─ <a href='ini_details.html#ini.build.layers.1.material'>material</a>
+│  │     ├─ <a href='ini_details.html#ini.build.layers.1.coils_inside'>coils_inside</a>
 │  │     ├─ <a href='ini_details.html#ini.build.layers.1.shape'>shape</a>
 │  │     ├─ <a href='ini_details.html#ini.build.layers.1.type'>type</a>
 │  │     └─ <a href='ini_details.html#ini.build.layers.1.side'>side</a>
@@ -126,7 +125,6 @@
 │  ├─ <a href='ini_details.html#ini.tf.ripple'>ripple</a>
 │  └─ <a href='ini_details.html#ini.tf.technology'>technology</a>
 ├─ <span class="sgr1">oh</span>
-│  ├─ <a href='ini_details.html#ini.oh.n_coils'>n_coils</a>
 │  └─ <a href='ini_details.html#ini.oh.technology'>technology</a>
 ├─ <span class="sgr1">bop</span>
 │  └─ <a href='ini_details.html#ini.bop.cycle_type'>cycle_type</a>
@@ -146,4 +144,4 @@
    ├─ <a href='ini_details.html#ini.requirements.q95'>q95</a>
    ├─ <a href='ini_details.html#ini.requirements.coil_j_margin'>coil_j_margin</a>
    └─ <a href='ini_details.html#ini.requirements.coil_stress_margin'>coil_stress_margin</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="inits.html">« Init routines</a><a class="docs-footer-nextpage" href="dd.html">Data Structure »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.7.0 on <span class="colophon-date" title="Friday 1 November 2024 03:05">Friday 1 November 2024</span>. Using Julia version 1.11.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="inits.html">« Init routines</a><a class="docs-footer-nextpage" href="dd.html">Data Structure »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.7.0 on <span class="colophon-date" title="Monday 4 November 2024 19:33">Monday 4 November 2024</span>. Using Julia version 1.11.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
