--- a/dev/ini.html
+++ b/dev/ini.html
@@ -41,9 +41,11 @@
 │  ├─ <a href='ini_details.html#ini.core_profiles.ne_sep_to_ped_ratio'>ne_sep_to_ped_ratio</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.ne_core_to_ped_ratio'>ne_core_to_ped_ratio</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.ne_shaping'>ne_shaping</a>
-│  ├─ <a href='ini_details.html#ini.core_profiles.T_ratio'>T_ratio</a>
-│  ├─ <a href='ini_details.html#ini.core_profiles.T_shaping'>T_shaping</a>
+│  ├─ <a href='ini_details.html#ini.core_profiles.Ti_Te_ratio'>Ti_Te_ratio</a>
+│  ├─ <a href='ini_details.html#ini.core_profiles.Te_shaping'>Te_shaping</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.Te_sep'>Te_sep</a>  [eV]
+│  ├─ <a href='ini_details.html#ini.core_profiles.Te_ped'>Te_ped</a>  [eV]
+│  ├─ <a href='ini_details.html#ini.core_profiles.Te_core'>Te_core</a>  [eV]
 │  ├─ <a href='ini_details.html#ini.core_profiles.zeff'>zeff</a>
 │  ├─ <a href='ini_details.html#ini.core_profiles.rot_core'>rot_core</a>  [s⁻¹]
 │  ├─ <a href='ini_details.html#ini.core_profiles.ngrid'>ngrid</a>
@@ -117,6 +119,7 @@
 │  │     ├─ <a href='ini_details.html#ini.build.layers.0.shape'>shape</a>
 │  │     ├─ <a href='ini_details.html#ini.build.layers.0.type'>type</a>
 │  │     └─ <a href='ini_details.html#ini.build.layers.0.side'>side</a>
+│  ├─ <a href='ini_details.html#ini.build.scale_layers_to_R0'>scale_layers_to_R0</a>
 │  ├─ <a href='ini_details.html#ini.build.plasma_gap'>plasma_gap</a>
 │  ├─ <a href='ini_details.html#ini.build.symmetric'>symmetric</a>
 │  ├─ <a href='ini_details.html#ini.build.divertors'>divertors</a>
@@ -151,4 +154,4 @@
    ├─ <a href='ini_details.html#ini.requirements.q95'>q95</a>
    ├─ <a href='ini_details.html#ini.requirements.coil_j_margin'>coil_j_margin</a>
    └─ <a href='ini_details.html#ini.requirements.coil_stress_margin'>coil_stress_margin</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="inits.html">« Init routines</a><a class="docs-footer-nextpage" href="dd.html">Data Structure »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Thursday 21 November 2024 02:47">Thursday 21 November 2024</span>. Using Julia version 1.11.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="inits.html">« Init routines</a><a class="docs-footer-nextpage" href="dd.html">Data Structure »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Friday 22 November 2024 01:20">Friday 22 November 2024</span>. Using Julia version 1.11.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
