build based on c9643aa

--- a/dev/act.html
+++ b/dev/act.html
@@ -83,12 +83,14 @@
 │  ├─ <a href='act_details.html#act.ActorEPED.rho_nml'>rho_nml</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.rho_ped'>rho_ped</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.T_ratio_pedestal'>T_ratio_pedestal</a>
-│  ├─ <a href='act_details.html#act.ActorEPED.ped_factor'>ped_factor</a>
-│  ├─ <a href='act_details.html#act.ActorEPED.only_powerlaw'>only_powerlaw</a>
+│  ├─ <a href='act_details.html#act.ActorEPED.Te_sep'>Te_sep</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.ip_from'>ip_from</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.βn_from'>βn_from</a>
-│  ├─ <a href='act_details.html#act.ActorEPED.ne_ped_from'>ne_ped_from</a>
-│  ├─ <a href='act_details.html#act.ActorEPED.zeff_ped_from'>zeff_ped_from</a>
+│  ├─ <a href='act_details.html#act.ActorEPED.ne_from'>ne_from</a>
+│  ├─ <a href='act_details.html#act.ActorEPED.zeff_from'>zeff_from</a>
+│  ├─ <a href='act_details.html#act.ActorEPED.density_factor'>density_factor</a>
+│  ├─ <a href='act_details.html#act.ActorEPED.ped_factor'>ped_factor</a>
+│  ├─ <a href='act_details.html#act.ActorEPED.only_powerlaw'>only_powerlaw</a>
 │  └─ <a href='act_details.html#act.ActorEPED.warn_nn_train_bounds'>warn_nn_train_bounds</a>
 ├─ <span class="sgr1">ActorEPEDprofiles</span>
 │  ├─ <a href='act_details.html#act.ActorEPEDprofiles.Te_shaping'>Te_shaping</a>
@@ -107,11 +109,10 @@
 │  ├─ <a href='act_details.html#act.ActorFRESCO.number_of_iterations'>number_of_iterations</a>
 │  ├─ <a href='act_details.html#act.ActorFRESCO.relax'>relax</a>
 │  ├─ <a href='act_details.html#act.ActorFRESCO.tolerance'>tolerance</a>
-│  ├─ <a href='act_details.html#act.ActorFRESCO.fixed_grid'>fixed_grid</a>
-│  ├─ <a href='act_details.html#act.ActorFRESCO.do_plot'>do_plot</a>
-│  ├─ <a href='act_details.html#act.ActorFRESCO.debug'>debug</a>
 │  ├─ <a href='act_details.html#act.ActorFRESCO.nR'>nR</a>
-│  └─ <a href='act_details.html#act.ActorFRESCO.nZ'>nZ</a>
+│  ├─ <a href='act_details.html#act.ActorFRESCO.nZ'>nZ</a>
+│  ├─ <a href='act_details.html#act.ActorFRESCO.do_plot'>do_plot</a>
+│  └─ <a href='act_details.html#act.ActorFRESCO.debug'>debug</a>
 ├─ <span class="sgr1">ActorFluxCalculator</span>
 │  ├─ <a href='act_details.html#act.ActorFluxCalculator.rho_transport'>rho_transport</a>
 │  ├─ <a href='act_details.html#act.ActorFluxCalculator.turbulence_model'>turbulence_model</a>
@@ -188,12 +189,17 @@
 ├─ <span class="sgr1">ActorPedestal</span>
 │  ├─ <a href='act_details.html#act.ActorPedestal.rho_nml'>rho_nml</a>
 │  ├─ <a href='act_details.html#act.ActorPedestal.rho_ped'>rho_ped</a>
-│  ├─ <a href='act_details.html#act.ActorPedestal.density_match'>density_match</a>
-│  ├─ <a href='act_details.html#act.ActorPedestal.model'>model</a>
+│  ├─ <a href='act_details.html#act.ActorPedestal.T_ratio_pedestal'>T_ratio_pedestal</a>
+│  ├─ <a href='act_details.html#act.ActorPedestal.Te_sep'>Te_sep</a>
 │  ├─ <a href='act_details.html#act.ActorPedestal.ip_from'>ip_from</a>
 │  ├─ <a href='act_details.html#act.ActorPedestal.βn_from'>βn_from</a>
 │  ├─ <a href='act_details.html#act.ActorPedestal.ne_from'>ne_from</a>
-│  ├─ <a href='act_details.html#act.ActorPedestal.zeff_ped_from'>zeff_ped_from</a>
+│  ├─ <a href='act_details.html#act.ActorPedestal.zeff_from'>zeff_from</a>
+│  ├─ <a href='act_details.html#act.ActorPedestal.density_match'>density_match</a>
+│  ├─ <a href='act_details.html#act.ActorPedestal.model'>model</a>
+│  ├─ <a href='act_details.html#act.ActorPedestal.tau_t'>tau_t</a>  [s]
+│  ├─ <a href='act_details.html#act.ActorPedestal.tau_n'>tau_n</a>  [s]
+│  ├─ <a href='act_details.html#act.ActorPedestal.density_ratio_L_over_H'>density_ratio_L_over_H</a>
 │  └─ <a href='act_details.html#act.ActorPedestal.do_plot'>do_plot</a>
 ├─ <span class="sgr1">ActorPlasmaLimits</span>
 │  ├─ <a href='act_details.html#act.ActorPlasmaLimits.models'>models</a>
@@ -208,6 +214,7 @@
 │  ├─ <a href='act_details.html#act.ActorQED.Nt'>Nt</a>
 │  ├─ <a href='act_details.html#act.ActorQED.solve_for'>solve_for</a>
 │  ├─ <a href='act_details.html#act.ActorQED.allow_floating_plasma_current'>allow_floating_plasma_current</a>
+│  ├─ <a href='act_details.html#act.ActorQED.qmin_desired'>qmin_desired</a>
 │  ├─ <a href='act_details.html#act.ActorQED.ip_from'>ip_from</a>
 │  └─ <a href='act_details.html#act.ActorQED.vloop_from'>vloop_from</a>
 ├─ <span class="sgr1">ActorQLGYRO</span>
@@ -223,15 +230,37 @@
 │  ├─ <a href='act_details.html#act.ActorQLGYRO.rho_transport'>rho_transport</a>
 │  └─ <a href='act_details.html#act.ActorQLGYRO.lump_ions'>lump_ions</a>
 ├─ <span class="sgr1">ActorRABBIT</span>
+├─ <span class="sgr1">ActorReplay</span>
+│  └─ <a href='act_details.html#act.ActorReplay.replay_dd'>replay_dd</a>
 ├─ <span class="sgr1">ActorSimpleEC</span>
-│  └─ <a href='act_details.html#act.ActorSimpleEC.ηcd_scale'>ηcd_scale</a>
+│  └─ <span class="sgr1">actuator</span>
+│     └─ <span class="sgr1">1</span>
+│        ├─ <a href='act_details.html#act.ActorSimpleEC.actuator.0.ηcd_scale'>ηcd_scale</a>
+│        ├─ <a href='act_details.html#act.ActorSimpleEC.actuator.0.rho_0'>rho_0</a>
+│        └─ <a href='act_details.html#act.ActorSimpleEC.actuator.0.width'>width</a>
 ├─ <span class="sgr1">ActorSimpleIC</span>
-│  └─ <a href='act_details.html#act.ActorSimpleIC.ηcd_scale'>ηcd_scale</a>
+│  └─ <span class="sgr1">actuator</span>
+│     └─ <span class="sgr1">1</span>
+│        ├─ <a href='act_details.html#act.ActorSimpleIC.actuator.0.ηcd_scale'>ηcd_scale</a>
+│        ├─ <a href='act_details.html#act.ActorSimpleIC.actuator.0.rho_0'>rho_0</a>
+│        └─ <a href='act_details.html#act.ActorSimpleIC.actuator.0.width'>width</a>
 ├─ <span class="sgr1">ActorSimpleLH</span>
-│  └─ <a href='act_details.html#act.ActorSimpleLH.ηcd_scale'>ηcd_scale</a>
+│  └─ <span class="sgr1">actuator</span>
+│     └─ <span class="sgr1">1</span>
+│        ├─ <a href='act_details.html#act.ActorSimpleLH.actuator.0.ηcd_scale'>ηcd_scale</a>
+│        ├─ <a href='act_details.html#act.ActorSimpleLH.actuator.0.rho_0'>rho_0</a>
+│        └─ <a href='act_details.html#act.ActorSimpleLH.actuator.0.width'>width</a>
 ├─ <span class="sgr1">ActorSimpleNB</span>
-│  └─ <a href='act_details.html#act.ActorSimpleNB.ηcd_scale'>ηcd_scale</a>
-├─ <span class="sgr1">ActorSimplePellet</span>
+│  └─ <span class="sgr1">actuator</span>
+│     └─ <span class="sgr1">1</span>
+│        ├─ <a href='act_details.html#act.ActorSimpleNB.actuator.0.ηcd_scale'>ηcd_scale</a>
+│        ├─ <a href='act_details.html#act.ActorSimpleNB.actuator.0.rho_0'>rho_0</a>
+│        └─ <a href='act_details.html#act.ActorSimpleNB.actuator.0.width'>width</a>
+├─ <span class="sgr1">ActorSimplePL</span>
+│  └─ <span class="sgr1">actuator</span>
+│     └─ <span class="sgr1">1</span>
+│        ├─ <a href='act_details.html#act.ActorSimplePL.actuator.0.rho_0'>rho_0</a>
+│        └─ <a href='act_details.html#act.ActorSimplePL.actuator.0.width'>width</a>
 ├─ <span class="sgr1">ActorStationaryPlasma</span>
 │  ├─ <a href='act_details.html#act.ActorStationaryPlasma.max_iter'>max_iter</a>
 │  ├─ <a href='act_details.html#act.ActorStationaryPlasma.convergence_error'>convergence_error</a>
@@ -253,10 +282,10 @@
 │  ├─ <a href='act_details.html#act.ActorTEQUILA.relax'>relax</a>
 │  ├─ <a href='act_details.html#act.ActorTEQUILA.tolerance'>tolerance</a>
 │  ├─ <a href='act_details.html#act.ActorTEQUILA.fixed_grid'>fixed_grid</a>
-│  ├─ <a href='act_details.html#act.ActorTEQUILA.do_plot'>do_plot</a>
-│  ├─ <a href='act_details.html#act.ActorTEQUILA.debug'>debug</a>
 │  ├─ <a href='act_details.html#act.ActorTEQUILA.R'>R</a>  [m]
-│  └─ <a href='act_details.html#act.ActorTEQUILA.Z'>Z</a>  [m]
+│  ├─ <a href='act_details.html#act.ActorTEQUILA.Z'>Z</a>  [m]
+│  ├─ <a href='act_details.html#act.ActorTEQUILA.do_plot'>do_plot</a>
+│  └─ <a href='act_details.html#act.ActorTEQUILA.debug'>debug</a>
 ├─ <span class="sgr1">ActorTGLF</span>
 │  ├─ <a href='act_details.html#act.ActorTGLF.model'>model</a>
 │  ├─ <a href='act_details.html#act.ActorTGLF.sat_rule'>sat_rule</a>
@@ -281,12 +310,18 @@
 │  ├─ <a href='act_details.html#act.ActorVerticalStability.model'>model</a>
 │  └─ <a href='act_details.html#act.ActorVerticalStability.do_plot'>do_plot</a>
 ├─ <span class="sgr1">ActorWPED</span>
-│  ├─ <a href='act_details.html#act.ActorWPED.ped_to_core_fraction'>ped_to_core_fraction</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.rho_nml'>rho_nml</a>
 │  ├─ <a href='act_details.html#act.ActorWPED.rho_ped'>rho_ped</a>
-│  ├─ <a href='act_details.html#act.ActorWPED.ne_ped_from'>ne_ped_from</a>
-│  ├─ <a href='act_details.html#act.ActorWPED.zeff_ped_from'>zeff_ped_from</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.T_ratio_pedestal'>T_ratio_pedestal</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.Te_sep'>Te_sep</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.ip_from'>ip_from</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.βn_from'>βn_from</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.ne_from'>ne_from</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.zeff_from'>zeff_from</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.density_factor'>density_factor</a>
+│  ├─ <a href='act_details.html#act.ActorWPED.ped_to_core_fraction'>ped_to_core_fraction</a>
 │  └─ <a href='act_details.html#act.ActorWPED.do_plot'>do_plot</a>
 └─ <span class="sgr1">ActorWholeFacility</span>
    ├─ <a href='act_details.html#act.ActorWholeFacility.update_plasma'>update_plasma</a>
    └─ <a href='act_details.html#act.ActorWholeFacility.update_build'>update_build</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Sunday 9 February 2025 02:51">Sunday 9 February 2025</span>. Using Julia version 1.11.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.1 on <span class="colophon-date" title="Thursday 13 February 2025 02:58">Thursday 13 February 2025</span>. Using Julia version 1.11.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
