--- a/dev/act.html
+++ b/dev/act.html
@@ -79,6 +79,10 @@
 │  ├─ <a href='act_details.html#act.ActorDynamicPlasma.ip_controller'>ip_controller</a>
 │  ├─ <a href='act_details.html#act.ActorDynamicPlasma.time_derivatives_sources'>time_derivatives_sources</a>
 │  └─ <a href='act_details.html#act.ActorDynamicPlasma.verbose'>verbose</a>
+├─ <span class="sgr1">ActorEGGO</span>
+│  ├─ <a href='act_details.html#act.ActorEGGO.model'>model</a>
+│  ├─ <a href='act_details.html#act.ActorEGGO.do_plot'>do_plot</a>
+│  └─ <a href='act_details.html#act.ActorEGGO.debug'>debug</a>
 ├─ <span class="sgr1">ActorEPED</span>
 │  ├─ <a href='act_details.html#act.ActorEPED.rho_nml'>rho_nml</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.rho_ped'>rho_ped</a>
@@ -88,7 +92,6 @@
 │  ├─ <a href='act_details.html#act.ActorEPED.βn_from'>βn_from</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.ne_from'>ne_from</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.zeff_from'>zeff_from</a>
-│  ├─ <a href='act_details.html#act.ActorEPED.density_factor'>density_factor</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.ped_factor'>ped_factor</a>
 │  ├─ <a href='act_details.html#act.ActorEPED.only_powerlaw'>only_powerlaw</a>
 │  └─ <a href='act_details.html#act.ActorEPED.warn_nn_train_bounds'>warn_nn_train_bounds</a>
@@ -124,6 +127,7 @@
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.evolve_densities'>evolve_densities</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.evolve_rotation'>evolve_rotation</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.evolve_pedestal'>evolve_pedestal</a>
+│  ├─ <a href='act_details.html#act.ActorFluxMatcher.evolve_plasma_sources'>evolve_plasma_sources</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.find_widths'>find_widths</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.max_iterations'>max_iterations</a>
 │  ├─ <a href='act_details.html#act.ActorFluxMatcher.optimizer_algorithm'>optimizer_algorithm</a>
@@ -201,6 +205,7 @@
 │  ├─ <a href='act_details.html#act.ActorPedestal.tau_t'>tau_t</a>  [s]
 │  ├─ <a href='act_details.html#act.ActorPedestal.tau_n'>tau_n</a>  [s]
 │  ├─ <a href='act_details.html#act.ActorPedestal.density_ratio_L_over_H'>density_ratio_L_over_H</a>
+│  ├─ <a href='act_details.html#act.ActorPedestal.zeff_ratio_L_over_H'>zeff_ratio_L_over_H</a>
 │  └─ <a href='act_details.html#act.ActorPedestal.do_plot'>do_plot</a>
 ├─ <span class="sgr1">ActorPlasmaLimits</span>
 │  ├─ <a href='act_details.html#act.ActorPlasmaLimits.models'>models</a>
@@ -319,10 +324,9 @@
 │  ├─ <a href='act_details.html#act.ActorWPED.βn_from'>βn_from</a>
 │  ├─ <a href='act_details.html#act.ActorWPED.ne_from'>ne_from</a>
 │  ├─ <a href='act_details.html#act.ActorWPED.zeff_from'>zeff_from</a>
-│  ├─ <a href='act_details.html#act.ActorWPED.density_factor'>density_factor</a>
 │  ├─ <a href='act_details.html#act.ActorWPED.ped_to_core_fraction'>ped_to_core_fraction</a>
 │  └─ <a href='act_details.html#act.ActorWPED.do_plot'>do_plot</a>
 └─ <span class="sgr1">ActorWholeFacility</span>
    ├─ <a href='act_details.html#act.ActorWholeFacility.update_plasma'>update_plasma</a>
    └─ <a href='act_details.html#act.ActorWholeFacility.update_build'>update_build</a>
-</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.1 on <span class="colophon-date" title="Monday 3 March 2025 02:57">Monday 3 March 2025</span>. Using Julia version 1.11.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="actors.html">« List of actors</a><a class="docs-footer-nextpage" href="inits.html">Init routines »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.1 on <span class="colophon-date" title="Monday 3 March 2025 22:52">Monday 3 March 2025</span>. Using Julia version 1.11.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
